[package]
name = "lp50xx"
version = "0.1.0"
authors = ["Oliver Stenning <code@ostenning.com>"]
edition = "2018"
description = "A simple platform agnostic library for the Texas Instruments LP50XX led driver"
keywords = ["embedded-hal", "driver", "led", "LP5012", "LP5009"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ostenning/lp50xx"

[dependencies]
embedded-hal = { version = "1.0.0" }

[features]
default = []