[package]
name = "lp50xx"
version = "0.1.1"
authors = ["Oliver <18360865+ost-ing@users.noreply.github.com>"]
edition = "2018"
description = "A simple platform agnostic library for the Texas Instruments LP50XX led driver"
keywords = ["embedded-hal", "driver", "led", "LP5012", "LP5009"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ost-ing/lp50xx"

[dependencies]
embedded-hal = { version = "1.0.0" }

[features]
default = []
